Arbitrary fetch plans in generic REST endpoints #4031 (#4042)
